adds working delete endpoint
